--- a/05DataPreprocess/03Discretize.ipynb
+++ b/05DataPreprocess/03Discretize.ipynb
@@ -511,6 +511,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## version 차이 \n",
+    "\n",
+    "* sklearn 0.23 이상 버전에서 sklearn.preprocessing.KBinsDiscretizer() 사용 가능하다.\n",
+    "* 더 낮은 버전에서 아래의 코드는 에러가 날 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### sklearn.preprocessing.KBinsDiscretizer()\n",
     "연속적인 특성값을 여러 구간으로 나누어 준다. 나눌 구간 개수를 지정한다. \n",
     "\n",
