--- a/05DataPreprocess/04Categorical.ipynb
+++ b/05DataPreprocess/04Categorical.ipynb
@@ -1382,7 +1382,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "items = ['TV','냉장고','세탁기','냉장고','TV']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0]\n",
+      " [1]\n",
+      " [2]\n",
+      " [1]\n",
+      " [0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# label encoder\n",
+    "encoder = LabelEncoder()\n",
+    "encoder.fit(items)\n",
+    "labels = encoder.transform(items)\n",
+    "labels = labels.reshape(-1,1)\n",
+    "print(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1398,17 +1436,8 @@
     }
    ],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "\n",
-    "items = ['TV','냉장고','세탁기','냉장고','TV']\n",
-    "\n",
-    "encoder = LabelEncoder()\n",
-    "encoder.fit(items)\n",
-    "labels = encoder.transform(items)\n",
-    "labels = labels.reshape(-1,1)\n",
-    "\n",
-    "one_hot = OneHotEncoder(categories='auto')\n",
+    "# one-hot encoder\n",
+    "one_hot = OneHotEncoder()\n",
     "one_hot.fit(labels)\n",
     "onehot_labels = one_hot.transform(labels)\n",
     "\n",
