--- a/05DataPreprocess/05MissingValue.ipynb
+++ b/05DataPreprocess/05MissingValue.ipynb
@@ -678,6 +678,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Version 차이\n",
+    "\n",
+    "* sklearn 0.23 이상에서는 SimpleImputer를 사용한다.\n",
+    "* 그 이하 버전에서는 SimpleImputer를 사용하는 대신에 Imputer를 사용해야 한다. \n",
+    "* 옵션 등에 차이가 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sklearn 0.19 버전에서 이 코드를 사용한다.\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import Imputer\n",
+    "\n",
+    "simr = Imputer(missing_values=np.nan, strategy='mean')\n",
+    "simr = simr.fit(df.values)\n",
+    "imputed_data = simr.transform(df.values)\n",
+    "imputed_data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
@@ -701,6 +728,7 @@
     }
    ],
    "source": [
+    "#  sklearn 0.23 이상에서는 이 코드를 사용하여 결측치를 대체한다.\n",
     "import numpy as np\n",
     "from sklearn.impute import SimpleImputer\n",
     "\n",
