--- a/05DataPreprocess/07Pipeline.ipynb
+++ b/05DataPreprocess/07Pipeline.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -25,7 +25,7 @@
    "source": [
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.impute import SimpleImputer\n",
+    "\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "import numpy as np"
    ]
@@ -42,7 +42,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 버전이 낮아 SimpleImputer 를 사용할 수 없으면  Imputer을 사용한다.\n",
+    "\n",
+    "from sklearn.preprocessing import Imputer\n",
+    "\n",
+    "num_pipeline = Pipeline([\n",
+    "                         ('imputer', Imputer(strategy=\"median\")),\n",
+    "                         ('std_scaler', StandardScaler())\n",
+    "])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -65,6 +81,37 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\aoneko\\anaconda3\\lib\\importlib\\_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n",
+      "C:\\Users\\aoneko\\anaconda3\\lib\\importlib\\_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n",
+      "C:\\Users\\aoneko\\anaconda3\\lib\\importlib\\_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "num_pipeline = Pipeline([\n",
+    "                         ('imputer', SimpleImputer(strategy=\"median\")),\n",
+    "                         ('std_scaler', StandardScaler())\n",
+    "])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "6dyFSvCDEjUA"
+   },
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -83,22 +130,6 @@
      ]
     }
    ],
-   "source": [
-    "num_pipeline = Pipeline([\n",
-    "                         ('imputer', SimpleImputer(strategy=\"median\")),\n",
-    "                         ('std_scaler', StandardScaler())\n",
-    "])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "6dyFSvCDEjUA"
-   },
-   "outputs": [],
    "source": [
     "# sample test data\n",
     "test_data = np.array([10,20,30,40,50,np.nan]).reshape(-1,1)\n",
@@ -123,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -145,6 +176,14 @@
     "outputId": "843b459d-bbd5-4abb-d4f4-7ec30ab7ddc1"
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\aoneko\\anaconda3\\lib\\importlib\\_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -205,10 +244,8 @@
        "2  10.0  11.0  12.0  NaN"
       ]
      },
-     "execution_count": 3,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 4,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -228,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -258,10 +295,8 @@
        "       [10., 11., 12., nan]])"
       ]
      },
-     "execution_count": 4,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 5,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -272,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -312,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -337,15 +372,14 @@
     {
      "data": {
       "text/plain": [
-       "[('imputer', SimpleImputer(add_indicator=False, copy=True, fill_value=None,\n",
+       "[('imputer',\n",
+       "  SimpleImputer(add_indicator=False, copy=True, fill_value=None,\n",
        "                missing_values=nan, strategy='median', verbose=0)),\n",
        " ('std_scaler', StandardScaler(copy=True, with_mean=True, with_std=True))]"
       ]
      },
-     "execution_count": 6,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 7,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -356,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -381,14 +415,13 @@
     {
      "data": {
       "text/plain": [
-       "('imputer', SimpleImputer(add_indicator=False, copy=True, fill_value=None,\n",
+       "('imputer',\n",
+       " SimpleImputer(add_indicator=False, copy=True, fill_value=None,\n",
        "               missing_values=nan, strategy='median', verbose=0))"
       ]
      },
-     "execution_count": 7,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 8,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -398,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -426,29 +459,26 @@
        "Pipeline(memory=None,\n",
        "         steps=[('imputer',\n",
        "                 SimpleImputer(add_indicator=False, copy=True, fill_value=0.0,\n",
-       "                               missing_values=nan, strategy='constant',\n",
+       "                               missing_values=nan, strategy='mean',\n",
        "                               verbose=0)),\n",
        "                ('std_scaler',\n",
        "                 StandardScaler(copy=True, with_mean=True, with_std=True))],\n",
        "         verbose=False)"
       ]
      },
-     "execution_count": 8,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 15,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 개별 변환단계의 일부 옵션 파라미터를 수정할 수 있다.\n",
-    "num_pipeline.set_params(imputer__strategy='constant')  # 결측치 대체 방법을 임의의 상수로 설정한다.\n",
-    "num_pipeline.set_params(imputer__fill_value=0.)"
+    "num_pipeline.set_params(imputer__strategy='mean')  # 결측치 대체 방법을 임의의 상수로 설정한다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -474,9 +504,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1.1769647  -1.1769647  -0.39223227  0.        ]\n",
-      " [-0.09053575 -0.09053575 -0.98058068  1.22474487]\n",
-      " [ 1.26750044  1.26750044  1.37281295 -1.22474487]]\n"
+      "[[-1.1769647  -1.1769647  -1.22474487 -1.22474487]\n",
+      " [-0.09053575 -0.09053575  0.          1.22474487]\n",
+      " [ 1.26750044  1.26750044  1.22474487  0.        ]]\n"
      ]
     }
    ],
@@ -499,13 +529,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "rw-DmxdP3XOi"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\aoneko\\anaconda3\\lib\\importlib\\_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn import datasets\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -517,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -543,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -571,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -598,7 +637,7 @@
      "output_type": "stream",
      "text": [
       "[0]\n",
-      "[[9.81134179e-01 1.88593889e-02 6.43202405e-06]]\n"
+      "[[9.34317450e-01 6.56729693e-02 9.58045960e-06]]\n"
      ]
     }
    ],
